# ConnCleaner

./: CMakeLists.txt  ConnCleaner.sln  ConnCleaner.vcxproj  ConnCleaner.vcxproj.filters
ConnCleaner/: ConnectionStatus.cpp  ConnectionStatus.hpp  main.cpp
ConnCleaner.xcodeproj/: project.pbxproj
